# CGNS_scratch

PETScCGNSReader/: CMakeLists.txt  README.md
PETScCGNSReader/Plugin/: CMakeLists.txt  PETScCGNSReader.xml  paraview.plugin
PETScCGNSReader/Plugin/PETScCGNSTools/: CMakeLists.txt  vtk.module  vtkPETScCGNSReader.cxx  vtkPETScCGNSReader.h
src/: CMakeLists.txt  CMakelists.txt  ex16.c  helloworld.cpp  org.cpp
